# crewai

cv_to_jobs_match/: README.md  pyproject.toml
cv_to_jobs_match/db/: chroma.sqlite3
cv_to_jobs_match/output/: decision.md  decision01.md
cv_to_jobs_match/src/cv_to_jobs_match/: crew.py  main.py
cv_to_jobs_match/src/cv_to_jobs_match/config/: tasks.yaml
cv_to_jobs_match/src/cv_to_jobs_match/data/: cv.txt
match_job_role_with_many_cvs/: README.md  pyproject.toml
match_job_role_with_many_cvs/db/: chroma.sqlite3
match_job_role_with_many_cvs/output/: decision.md
match_job_role_with_many_cvs/src/match_job_role_with_many_cvs/: crew.py  main.py
match_job_role_with_many_cvs/src/match_job_role_with_many_cvs/config/: agents.yaml  tasks.yaml
match_job_role_with_many_cvs/src/match_job_role_with_many_cvs/data/: jobs.csv
match_job_role_with_many_cvs/src/match_job_role_with_many_cvs/data/cvs/: cv.txt  cv2.txt  cv3.txt  resume_agile_delivery_lead_1573d3b4-88d7-468e-9be2-6af74857c67e.txt  resume_agile_delivery_lead_336c443b-4119-4d62-8819-5f47d70f57fc.txt  resume_agile_delivery_lead_69fea36d-16a7-450a-9388-5bc429bc9dde.txt  resume_agile_delivery_lead_b2510df2-f1ae-4565-b8b8-9399c046c930.txt  resume_agile_delivery_lead_fb9e2950-f4f3-44bb-b8a9-aa3419041f10.txt  resume_business_analyst_0116ff53-a6b6-4b59-93f0-54e6a196a2f5.txt  resume_business_analyst_08a46e20-e9c9-4056-8d0a-738f9fc192a2.txt  resume_business_analyst_15fab917-0af3-45c0-8040-e3de1d38ab58.txt  (+89 more)
match_job_role_with_many_cvs/src/match_job_role_with_many_cvs/tools/: cv_reader_tool.py
