[project]
name = "cv_to_jobs_match"
version = "0.1.0"
description = "cv_to_jobs_match using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
cv_to_jobs_match = "cv_to_jobs_match.main:run"
run_crew = "cv_to_jobs_match.main:run"
train = "cv_to_jobs_match.main:train"
replay = "cv_to_jobs_match.main:replay"
test = "cv_to_jobs_match.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
