[project]
name = "match_job_role_with_many_cvs"
version = "0.1.0"
description = "match_job_role_with_many_cvs using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
match_job_role_with_many_cvs = "match_job_role_with_many_cvs.main:run"
run_crew = "match_job_role_with_many_cvs.main:run"
train = "match_job_role_with_many_cvs.main:train"
replay = "match_job_role_with_many_cvs.main:replay"
test = "match_job_role_with_many_cvs.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
